k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackaton-video-management
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hackaton-video-management.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hackaton-video-management
                port:
                  number: 80
